eclipse-workspace/Surya Dev Org/src/objects/products_purchased__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>products purchased</relationshipLabel>
        <relationshipName>products_purchased</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>stock</label>
        <referenceTo>stock__c</referenceTo>
        <relationshipLabel>products purchased</relationshipLabel>
        <relationshipName>products_purchased</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>total_price_of_all_units__c</fullName>
        <formula>quantity__c  *  unit_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total price of all units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unit_price__c</fullName>
        <label>unit price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>products purchased</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>item number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>products purchased</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>